--- a/foundry.toml
+++ b/foundry.toml
@@ -5,4 +5,9 @@ libs = ["lib"]
 
 remapping = ['@openzeppelin/contracts=lib/openzeppelin-contracts/contracts']
 
+fs_permissions = [
+    { access = "read", path = "./broadcast" },
+    { access = "read", path = "./reports" },
+]
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
