--- a/foundry.toml
+++ b/foundry.toml
@@ -10,4 +10,6 @@ fs_permissions = [
     { access = "read", path = "./reports" },
 ]
 
+is-system = true
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
