test if zkOwner Can Execute Commands

--- a/foundry.toml
+++ b/foundry.toml
@@ -11,5 +11,6 @@ fs_permissions = [
 ]
 
 is-system = true
+via-ir=true
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
